# bilinote

./: .gitignore  AGENTS.md  CLAUDE.md  FORK_CHANGELOG.md  GitDiffForAI.ps1  README.md  squash-commits.ps1
.agents/skills/brainstorm-plus/: SKILL.md
.agents/skills/context-continuity/: SKILL.md
.agents/skills/execute-plan-tdd/: SKILL.md
.agents/skills/harvest-learnings/: SKILL.md
.agents/skills/review-with-agents/: SKILL.md
.agents/skills/systematic-debugging/: SKILL.md
.agents/skills/write-task-plan/: SKILL.md
.claude/: settings.json
.claude/commands/fusion/: brainstorm-plus.md  checkpoint.md  execute-plan-tdd.md  (+5 more)
.claude/hooks/: fusion-pre-compact.py  fusion-session-start.py
.codex/: hooks.json
.codex/hooks/: fusion-session-start.py
.fusion/: hashes.json
.github/workflows/: build-macos.yml  ci.yml  release.yml
.trellis/: .template-hashes.json  config.yaml  custom-trellis-maintenance.md  fusion-workflow-quickref.md  fusion-workflow.md
binote/: README.md  build-android.sh  build-macos.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
binote/scripts/: build-macos.mjs
binote/src/: App.tsx  main.tsx
binote/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
binote/src-tauri/capabilities/: default.json
binote/src-tauri/icons/: icon.icns
binote/src-tauri/src/: auth.rs  bilibili.rs  commands.rs  commands.rs.backup  connection_test.rs  error.rs  lib.rs  llm.rs  main.rs  notification.rs  retry.rs  store.rs
binote/src-tauri/src/asr/: dashscope.rs  mod.rs  sensevoice.rs  utils.rs
(+44 files in other folders)
