[package]
name = "binote"
version = "0.1.0"
edition = "2021"

[lib]
name = "binote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1"
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
hex = "0.4"
urlencoding = "2"
